# ampere

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: amp.c  ampere.c
src/backend/x11/: amp_x11_backend.c
src/logging/: amp_logger.c  amp_logger.h
src/wm/: amp_backend.h  amp_backend_action.h  amp_backend_event.h  amp_backend_message.h  amp_layout.h  amp_wm.c  amp_wm.h
src/wm/layout/: amp_column_layout.c
tests/: CMakeLists.txt  test.c
tools/: format.py  run-valgrind.sh  xephyr-session.sh
